objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>YIT Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>New contact later</fullName>
        </values>
        <values>
            <fullName>No actions</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>YIT Rental Process</fullName>
        <description>Lead process for YIT Rental CRM</description>
        <isActive>true</isActive>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountID__c</fullName>
        <description>Salesforce.com Account ID, used by Lead Mass Conversion.</description>
        <inlineHelpText>Salesforce.com Account ID</inlineHelpText>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apartment_Sales_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User wants to get information about new apartments on sale, includes marketing permission.</description>
        <inlineHelpText>I want to get information about new apartments on sale.</inlineHelpText>
        <label>Apartment Sales Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <description>For use on Leads being passed to Pardot via the LeadDistributor.</description>
        <inlineHelpText>For use on Leads being passed to Pardot via the LeadDistributor.</inlineHelpText>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Premises</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Housing Rental</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Description__c</fullName>
        <inlineHelpText>This description text comes automatically from Campaign member form. Text is always the latest updated text if the lead has many memberships to different campaigns.</inlineHelpText>
        <label>Campaign Member Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <description>This Status text comes automatically from Campaign member form. Text is always the latest updated text if the lead has many memberships to different campaigns.</description>
        <label>Campaign Member Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>Formula shows Campaign Name. Used in Partner Portal.</description>
        <formula>Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tells which Campaign Lead is connected.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_Of_Interest__c</fullName>
        <label>City of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asikkala</fullName>
                </value>
                <value>
                    <fullName>Espoo</fullName>
                </value>
                <value>
                    <fullName>Hämeenlinna</fullName>
                </value>
                <value>
                    <fullName>Hamina</fullName>
                </value>
                <value>
                    <fullName>Heinola</fullName>
                </value>
                <value>
                    <fullName>Helsinki</fullName>
                </value>
                <value>
                    <fullName>Hollola</fullName>
                </value>
                <value>
                    <fullName>Hyvinkää</fullName>
                </value>
                <value>
                    <fullName>Imatra</fullName>
                </value>
                <value>
                    <fullName>Järvenpää</fullName>
                </value>
                <value>
                    <fullName>Joensuu</fullName>
                </value>
                <value>
                    <fullName>Jyväskylä</fullName>
                </value>
                <value>
                    <fullName>Kaarina</fullName>
                </value>
                <value>
                    <fullName>Kauniainen</fullName>
                </value>
                <value>
                    <fullName>Kemi</fullName>
                </value>
                <value>
                    <fullName>Kempele</fullName>
                </value>
                <value>
                    <fullName>Kerava</fullName>
                </value>
                <value>
                    <fullName>Kirkkonummi</fullName>
                </value>
                <value>
                    <fullName>Kittilä</fullName>
                </value>
                <value>
                    <fullName>Kokkola</fullName>
                </value>
                <value>
                    <fullName>Kolari</fullName>
                </value>
                <value>
                    <fullName>Kotka</fullName>
                </value>
                <value>
                    <fullName>Kouvola</fullName>
                </value>
                <value>
                    <fullName>Kuopio</fullName>
                </value>
                <value>
                    <fullName>Kuusamo</fullName>
                </value>
                <value>
                    <fullName>Lahti</fullName>
                </value>
                <value>
                    <fullName>Lappeenranta</fullName>
                </value>
                <value>
                    <fullName>Lohja</fullName>
                </value>
                <value>
                    <fullName>Loviisa</fullName>
                </value>
                <value>
                    <fullName>Mäntsälä</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Region__c</fullName>
        <label>City/Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cold_Lead_Nurturing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Cold Lead Nurturing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments_for_us__c</fullName>
        <inlineHelpText>This information populates from Pardot field: Comments for us (Viestisi meille)</inlineHelpText>
        <label>Comments for us</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this lead is created from Contact</description>
        <label>Contact Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customers_Note__c</fullName>
        <inlineHelpText>This information comes directly from Web to lead -form where this person has described his needs.</inlineHelpText>
        <label>Customer&apos;s Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>D_B_ID__c</fullName>
        <label>D&amp;B ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_TCI_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field used for the trigger in the multitenant logic for avoid multiple email sent to TCI</description>
        <label>Do Not Send TCI Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_of_Tenancy_Agreement__c</fullName>
        <label>End date of Tenancy Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fonecta_ID__c</fullName>
        <externalId>true</externalId>
        <label>Fonecta ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDPR_Date__c</fullName>
        <label>GDPR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GDPR_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDPR Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDPR_Source__c</fullName>
        <label>GDPR Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutSolicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Opted Out Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Open_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Open Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ideal_Location__c</fullName>
        <label>Ideal Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Callback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate Callback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_code__c</fullName>
        <description>Coming from Product app integration and indicating the language being used by the lead</description>
        <inlineHelpText>Coming from Product app integration and indicating the language being used by the lead</inlineHelpText>
        <label>Language code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_campaign_response__c</fullName>
        <label>Last campaign response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_deal_won__c</fullName>
        <label>Last deal won</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_lead_campaign_response__c</fullName>
        <label>Last lead campaign response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_moving_day__c</fullName>
        <label>Latest Moving Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadApp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if true Lead is inserted from the Lead App.</description>
        <label>LeadApp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Assessment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Assessment Rule</label>
        <referenceTo>Lead_Assessment_Rule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Distributor_Score__c</fullName>
        <label>Lead Distributor Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Inquiry_date__c</fullName>
        <description>Provides timestamp for Leads moving to Pardot via the LeadDistributor.</description>
        <inlineHelpText>Provides timestamp for Leads moving to Pardot via the LeadDistributor.</inlineHelpText>
        <label>Lead Inquiry date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Item_of_Interest__c</fullName>
        <description>Identifies the specific property of interest. For use on leads passed to Pardot via the LeadDistributor.</description>
        <inlineHelpText>Identifies the specific property of interest. For use on leads passed to Pardot via the LeadDistributor.</inlineHelpText>
        <label>Lead Item of Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Origin__c</fullName>
        <description>Source where a lead comes from</description>
        <label>Lead Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Mapping_field__c</fullName>
        <description>Shows the lead source field value through formula, intention is to not show this on page layouts, but use it to map the value to account lead source field when lead is converted.</description>
        <formula>text(LeadSource )</formula>
        <label>Lead Source Mapping field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Temperature__c</fullName>
        <formula>IF(
				pi__score__c &lt; 100, IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685r000000fyxs&amp;operationContext=CHATTER&amp;contentId=05T5r000002P5eT&apos;, &apos;Cold&apos;, 35, 35),
IF(
				pi__score__c &lt; 500, IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685r000000fyxx&amp;operationContext=CHATTER&amp;contentId=05T5r000002P5eY&apos;, &apos;Warm&apos;, 35, 35),

    IMAGE(&apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685r000000fyy2&amp;operationContext=CHATTER&amp;contentId=05T5r000002P5ed&apos;, &apos;Hot&apos;, 35, 35)
			))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Temperature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_country__c</fullName>
        <description>Which country is the lead coming from</description>
        <inlineHelpText>Which country is the lead coming from</inlineHelpText>
        <label>Lead country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                    <label>fi</label>
                </value>
                <value>
                    <fullName>CZ</fullName>
                    <label>cz</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_free_text__c</fullName>
        <description>Free text entered by lead</description>
        <inlineHelpText>Free text entered by lead</inlineHelpText>
        <label>Lead free text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_from_Web_Site__c</fullName>
        <label>Lead from Web Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <inlineHelpText>THIS FIELD IS GOING TO BE DELETED. PLEASE MOVE ALL DATA UNDER A TASK.</inlineHelpText>
        <label>Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Auxiliary_Field__c</fullName>
        <label>Marketing, Auxiliary Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Email_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Email Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Name__c</fullName>
        <label>Marketing Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_new__c</fullName>
        <description>That custom Mobile field will be mapped to Contact&apos;s Mobile field.</description>
        <inlineHelpText>That custom Mobile field will be mapped to Contact&apos;s Mobile field.</inlineHelpText>
        <label>Mobile new</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Need_of_Space_m__c</fullName>
        <label>Need of Space (m²)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Contact__c</fullName>
        <label>Next Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_land_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If contact odes not want any land mail</description>
        <inlineHelpText>If contact odes not want any land mail</inlineHelpText>
        <label>No land mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_forthe_next_Campaign__c</fullName>
        <label>Notes for next Campaigns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owned_Premises__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owned Premises</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TCI Leads (Person Account)</relationshipLabel>
        <relationshipName>TCI_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <externalId>true</externalId>
        <label>Person ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefers_to_be_contacted_by_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefers to be contacted by email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefers_to_be_contacted_by_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefers to be contacted by phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy_Agreement_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy Agreement Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_CRM_Ids__c</fullName>
        <description>Keep the ids of the product in case if there was no campaign created. This is for Rental Business.</description>
        <label>Last Product CRM Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Business_Segment__c</fullName>
        <formula>CASE(RecordType.DeveloperName, 
					&apos;B2C_Housing_Sales&apos;, &apos;Housing&apos; ,
					&apos;Business_Premises&apos;, &apos;Business Premises&apos;,
					&apos;Infra_Services&apos;, &apos;Infrastructure&apos;,
					&apos;Housing&apos;)</formula>
        <label>Project Business Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>External rating information.</description>
        <label>Account Rating</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Lead Source is real estate agent this look up field must be filled.</inlineHelpText>
        <label>Real Estate Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Liidit</relationshipLabel>
        <relationshipName>Liidit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_contact__c</fullName>
        <description>Tällä kentällä ohjataan Pardotin kautta tulevat liidit haluttuun jonoon.</description>
        <inlineHelpText>Liidien ohjaukseen, Pardotin Reason for contact -kentän sisältö</inlineHelpText>
        <label>Reason for contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the candidate doesn&apos;t win the apartment but is recommended after interview, they can mark as preferred</description>
        <inlineHelpText>If the candidate doesn&apos;t win the apartment but is recommended check this box</inlineHelpText>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rental_Apartment_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User wants to get information about future rental apartments, includes marketing permission</description>
        <inlineHelpText>I want to get information about future rental apartments.</inlineHelpText>
        <label>Rental Apartment Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLead_ID__c</fullName>
        <description>Fonecta&apos;s ID code for each contact. One person can have several SalesLead ID codes if he has got multiple positions. (Fonecta ID + Position ID + Person ID)</description>
        <externalId>true</externalId>
        <label>SalesLead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sauna__c</fullName>
        <description>Does the lead demand sauna in his future apartment</description>
        <inlineHelpText>Does the lead demand sauna in his future apartment</inlineHelpText>
        <label>Sauna</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Notification_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Partner Portal, when User change Lead Owner. Checkbox trigger Workflow Rule that send notification email and unceck checkbox.</description>
        <label>Send Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopping_Center_Business_Fields__c</fullName>
        <label>Shopping Center Business Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Space__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                    <default>true</default>
                    <label>-</label>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Public services</fullName>
                </value>
                <value>
                    <fullName>Other commercial services</fullName>
                </value>
                <value>
                    <fullName>Speciality retailers</fullName>
                </value>
                <value>
                    <fullName>Department stores</fullName>
                </value>
                <value>
                    <fullName>Health and beauty</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
                <value>
                    <fullName>Furnishing, home decor and supplies</fullName>
                </value>
                <value>
                    <fullName>Cafés and restaurants</fullName>
                </value>
                <value>
                    <fullName>Grocery Stores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specified_Lead_Source__c</fullName>
        <description>SalesLead ID is not unique when it&apos;s under Lead, but it is unique under Contact.</description>
        <label>Specified Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tehomax</fullName>
                </value>
                <value>
                    <fullName>Micromedia</fullName>
                </value>
                <value>
                    <fullName>Bookers</fullName>
                </value>
                <value>
                    <fullName>Snoobi</fullName>
                </value>
                <value>
                    <fullName>Search engines</fullName>
                </value>
                <value>
                    <fullName>eMail campaigns</fullName>
                </value>
                <value>
                    <fullName>Direct Mail, printed</fullName>
                </value>
                <value>
                    <fullName>Advertising campaign for print media</fullName>
                </value>
                <value>
                    <fullName>www-campaign</fullName>
                </value>
                <value>
                    <fullName>Other, specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specified_lead_Source_Description__c</fullName>
        <label>Specified Lead Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_list_Future_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription list - Future Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_list_Retail_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription list - Retail Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_list_YIT_Talon_Tekniikka__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription list - YIT Talon Tekniikka</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_To_MC_Cold_Lead_Nurturing__c</fullName>
        <formula>Cold_Lead_Nurturing__c &amp;&amp;
	NOT(ISBLANK( Lead_Assessment_Rule__c ))</formula>
        <label>Sync To MC Cold Lead Nurturing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenant_Information_Form_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate when the person has filled tenant information form (Asiakastieo)</description>
        <label>Tenant Information Form Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Traffic_light__c</fullName>
        <formula>IMAGE( 
CASE( Rating__c , 
&quot;AAA&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;AA&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;AN&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;-&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;B&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;C&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Traffic Light&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Rating Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Lead__c</fullName>
        <description>Field used in rental for define different type of leads</description>
        <label>Type of Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Space__c</fullName>
        <inlineHelpText>If You pick Other please write in Description field what kind of space</inlineHelpText>
        <label>Type of Space</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Production/ Industrial</fullName>
                </value>
                <value>
                    <fullName>Multifunctional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uutiskirje_Kaupan_alan_n_kemyksi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uutiskirje - Kaupan alan näkemyksiä</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uutiskirje_Tulevaisuuden_ty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uutiskirje - Tulevaisuuden työ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uutiskirje_YIT_Talon_Tekniikka__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uutiskirje - YIT Talon Tekniikka</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_to_Lead_URL__c</fullName>
        <label>Web to Lead URL</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>